# serializer version: 1
# name: TestGet.test_get
  dict({
    'id': 'bf1b993c',
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestGet.test_legacy_id
  dict({
    'id': 'bf1b993c',
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestGet.test_user
  dict({
    'id': 'bf1b993c',
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
      dict({
        'administrator': False,
        'handle': 'laura56',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: test_create[mongo]
  dict({
    '_id': 'bf1b993c',
    'name': 'test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: test_create[pg]
  <SQLGroup(id=1, legacy_id=bf1b993c, name=test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>
# ---
# name: test_update_permissions[mongo_added]
  dict({
    'cancel_job': False,
    'create_ref': False,
    'create_sample': True,
    'modify_hmm': False,
    'modify_subtraction': True,
    'remove_file': False,
    'remove_job': False,
    'upload_file': False,
  })
# ---
# name: test_update_permissions[mongo_removed]
  dict({
    'cancel_job': False,
    'create_ref': False,
    'create_sample': False,
    'modify_hmm': False,
    'modify_subtraction': True,
    'remove_file': False,
    'remove_job': False,
    'upload_file': False,
  })
# ---
